<resources>
    <string name="app_name">PitStop</string>
    <string name="don_t_have_an_account_already">Don\'t have an account already?</string>
    <string name="log_in">Log in!</string>
    <string name="sign_in">Sign In :)</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fill_in_the_following_details">Fill in the following details</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="select_location">Select Location</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login2">Login2</string>
    <string name="switch_to_shop_login">Switch to Shop Login</string>
    <string name="eye">eye</string>
    <string name="title_activity_login_main">LoginMain</string>
    <string name="bookings">Bookings</string>
    <string name="shops_nearby">Shops Nearby</string>
    <string name="signout">Signout</string>
    <string name="nav_drawer_open">Open navigation Drawer</string>
    <string name="nav_drawer_close">Close navigation Drawer</string>
    <string name="name">Name</string>
    <string name="my_shop">My Shop</string>
    <string name="settings">Settings</string>
    <string name="MyAccount">My Account</string>
    <string name="other">Other:</string>
    <string name="cust">Customer</string>
    <string name="time_interval_for_each_customer">Time interval for each customer:</string>
    <string name="min15">1 hr</string>
    <string name="min30">2 hr</string>
    <string name="_0">0</string>
    <string name="shop_start_time">Shop Start Time:</string>
    <string name="shop_end_time">Shop End Time :</string>
    <string name="slots">Slots :</string>
    <string name="set">Set</string>
    <string name="press_to_remove_slot">Press (-) to remove slot</string>
    <string name="to">To</string>
    <string name="my_bookings">My bookings:</string>
    <string name="remove">remove</string>
    <string name="shopname">ShopName</string>
    <string name="type">Type</string>
    <string name="shop_name">Shop Name</string>
    <string name="select_category">Select Category: </string>
    <string name="grocery">Grocery</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="saloon">saloon</string>
    <string name="barber">Bakery</string>
    <string name="available_shops">Available Shops:</string>
    <string name="avaiSlots">Available Slots:</string>
    <string name="avaiShops">Available Shops</string>
    <string name="custname">custName</string>
    <string name="custphone">custPhone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_location">Set Location</string>
    <string name="shop_location">shop Location</string>
    <string name="sign">Sign Up!</string>
</resources>