<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/CN_shops"
            android:icon="@drawable/ic_shoppingcart"
            android:title="@string/shops_nearby" />
        <item
            android:id="@+id/CN_bookings"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/bookings" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/CN_signout"
                android:icon="@drawable/ic_logout"
                android:title="@string/signout" />
        </menu>
    </item>
</menu>