<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    tools:context=".loginAct.SignIn2">

    <TextView
        android:id="@+id/dt22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/sign"
        android:textColor="@color/secondary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/S2_ET_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/shop_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/S2_ET_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/S2_ET_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/S2_ET_repass"
        app:layout_constraintEnd_toStartOf="@+id/SI2_eye1" />

    <EditText
        android:id="@+id/S2_ET_repass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/Si2_loc"
        app:layout_constraintEnd_toStartOf="@+id/SI2_eye2" />

    <EditText
        android:id="@+id/S2_ET_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_input"
        android:digits="0123456789"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/S2_ET_pass"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Si2_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button2"
        android:padding="12dp"
        android:text="@string/select_location"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/S2_B_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/S2_B_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/SI2_eye1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/eye"
        android:onClick="eyeFunc1"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@+id/S2_ET_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/S2_ET_pass" />

    <ImageButton
        android:id="@+id/SI2_eye2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"

        android:contentDescription="@string/eye"
        android:onClick="eyeFunc2"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@+id/S2_ET_repass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/S2_ET_repass" />

    <Spinner
        android:id="@+id/shopTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/spinner_back"
        android:popupBackground="@color/colorPrimaryLight"
        app:layout_constraintBottom_toTopOf="@+id/S2_ET_Name"
        app:layout_constraintEnd_toEndOf="@+id/S2_ET_Name"
        app:layout_constraintStart_toStartOf="@+id/dt22" />

</androidx.constraintlayout.widget.ConstraintLayout>