<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="4dp"
    android:elevation="15dp"
    app:cardCornerRadius="4dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookcard_t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/bookcard_am1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/bookcard_dum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/to" />

            <TextView
                android:id="@+id/bookcard_t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />


            <TextView
                android:id="@+id/bookcard_am2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccentDark"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookcard_shopname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custname" />

            <TextView
                android:id="@+id/bookcard_shopphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custphone" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>